WexGit/Wex_DX/force-app/main/default/objects/Lead_RR_Queue_Member_Assignments__c/Lead_RR_Queue_Member_Assignments__c.object-meta.xml
<CustomObject>
    <label>Lead RR Queue Member Assignments</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Lead_RR_Queue_Member_Assignments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead RR Queue Member Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>