WexGit/Wex_DX/force-app/main/default/objects/Lead_RR_Queue_Member_Assignments__c/fields/AssignmentUpdatesNeedReview__c.field-meta.xml
<CustomField>
    <fullName>AssignmentUpdatesNeedReview__c</fullName>
    <formula>Lead_Round_Robin_Queue__r.AssignmentUpdatesNeedReview__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AssignmentUpdatesNeedReview</label>
    <type>Checkbox</type>
</CustomField>