WexGit/Wex_DX/force-app/main/default/objects/Lead_RR_Queue_Member_Assignments__c/fields/Lead_Round_Robin_Queue__c.field-meta.xml
<CustomField>
    <fullName>Lead_Round_Robin_Queue__c</fullName>
    <label>Lead Round Robin Queue</label>
    <referenceTo>LeadRoundRobinQueue__c</referenceTo>
    <relationshipLabel>Lead RR Queue Member Assignments</relationshipLabel>
    <relationshipName>Lead_RR_Queue_Member_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>