WexGit/Wex_DX/force-app/main/default/objects/Lead_RR_Queue_Member_Assignments__c/fields/Weight_Percent__c.field-meta.xml
<CustomField>
    <fullName>Weight_Percent__c</fullName>
    <formula>Weight__c / Lead_Round_Robin_Queue__r.TotalQueueMembers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weight Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>